[TASK] Remove docker image plugin, no longer used.