@@ -108,7 +108,6 @@
     <maven.plugin.nexus.autoReleaseAfterClose>true</maven.plugin.nexus.autoReleaseAfterClose>
     <maven.plugin.version.version>2.7</maven.plugin.version.version>
     <maven.plugin.jooq.version>3.11.9</maven.plugin.jooq.version>
-    <maven.plugin.docker-image.version>1.4.10</maven.plugin.docker-image.version>
     <maven.plugin.owasp-dependency-check.version>4.0.2</maven.plugin.owasp-dependency-check.version>
     <sonar.binaries>${project.basedir}/target/classes</sonar.binaries>
     <sonar.junit.reportsPath>target/surefire-reports</sonar.junit.reportsPath>
@@ -166,28 +165,6 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <version>${maven.plugin.deploy.version}</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>${maven.plugin.failsafe.version}</version>
-          <executions>
-            <execution>
-              <id>integration-tests</id>
-              <goals>
-                <goal>integration-test</goal>
-                <goal>verify</goal>
-              </goals>
-            </execution>
-          </executions>
-          <configuration>
-            <argLine>
-              --illegal-access=permit
-            </argLine>
-            <forkCount>0</forkCount>
-            <useSystemClassLoader>false</useSystemClassLoader>
-          </configuration>
         </plugin>
 
         <plugin>
@@ -401,28 +378,6 @@
               <param>be.yildizgames.*</param>
             </targetTests>
           </configuration>
-        </plugin>
-
-        <plugin>
-          <groupId>com.spotify</groupId>
-          <artifactId>dockerfile-maven-plugin</artifactId>
-          <version>${maven.plugin.docker-image.version}</version>
-          <executions>
-            <execution>
-              <id>build-docker-image</id>
-              <phase>package</phase>
-              <goals>
-                <goal>build</goal>
-              </goals>
-            </execution>
-            <execution>
-              <id>push-docker-image</id>
-              <phase>install</phase>
-              <goals>
-                <goal>push</goal>
-              </goals>
-            </execution>
-          </executions>
         </plugin>
 
         <plugin>
